# flocking-game

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/: data.json
include/: Animation.h  Arena.h  Consumable.h  Entity.h  Flocking.h  Game.h  Prop.h  Sprite.h  Vec2.h
src/: Animation.cpp  Arena.cpp  Entity.cpp  Flocking.cpp  Game.cpp  Prop.cpp  Sprite.cpp  main.cpp
tests/: AnimationTests.cpp  ConsumableTests.cpp  EntityTests.cpp  FlockingTests.cpp  GameTests.cpp  PropTests.cpp
